Added likes, clicks, views to view all resources table. Updated API_URL to the new backend

--- a/src/app/review/view-all-resources/view-all-resources.component.html
+++ b/src/app/review/view-all-resources/view-all-resources.component.html
@@ -15,6 +15,10 @@
                                 <th scope="col">Type</th>
                                 <th scope="col">Title</th>
                                 <th scope="col">Author</th>
+                                <th scope="col">Likes</th>
+                                <th scope="col">Views</th>
+                                <th scope="col">Clicks</th>
+
                                 <!-- <th scope="col">Handle</th> -->
                               </tr>
                             </thead>
@@ -25,6 +29,9 @@
                                 <td>{{ resource.type }}</td>
                                 <td>{{ resource.title }}</td>
                                 <td>{{ resource.author }}</td>
+                                <td>{{ resource.likes }}</td>
+                                <td>{{ resource.views }}</td>
+                                <td>{{ resource.clicks }}</td>
                             </tr>
                             </tbody>
                         </table>
