--- a/src/app/review/view-all-resources/view-all-resources.component.html
+++ b/src/app/review/view-all-resources/view-all-resources.component.html
@@ -7,17 +7,17 @@
           <md-card>
               <md-card-subtitle>All Resources</md-card-subtitle>
               <md-card-title><h4>Total resources: {{ arrLen }}</h4></md-card-title>
-              <md-card-content>
-                    <table *ngIf="arrLen > 0" class="table table-hover">
+              <md-card-content style="display:table;">
+                    <table *ngIf="arrLen > 0" class="table table-hover" style="width: 100%">
                             <thead>
                               <tr>
-                                <th scope="col">id</th>
-                                <th scope="col">Type</th>
-                                <th scope="col">Title</th>
-                                <th scope="col">Author</th>
-                                <th scope="col">Likes</th>
-                                <th scope="col">Views</th>
-                                <th scope="col">Clicks</th>
+                                <th scope="col" style="width: 14%">id</th>
+                                <th scope="col" style="width: 14%">Type</th>
+                                <th scope="col" style="width: 14%">Title</th>
+                                <th scope="col" style="width: 14%">Author</th>
+                                <th scope="col" style="width: 14%; text-align: center">Likes</th>
+                                <th scope="col" style="width: 14%; text-align: center">Views</th>
+                                <th scope="col" style="width: 14%; text-align: center">Clicks</th>
 
                                 <!-- <th scope="col">Handle</th> -->
                               </tr>
@@ -28,10 +28,10 @@
                                 <td><a (click)="edit(resource)"><button class="btn btn-primary" style="min-width: 100%;">{{ resource.id }}</button></a></td>
                                 <td>{{ resource.type }}</td>
                                 <td>{{ resource.title }}</td>
-                                <td>{{ resource.author }}</td>
-                                <td>{{ resource.likes }}</td>
-                                <td>{{ resource.views }}</td>
-                                <td>{{ resource.clicks }}</td>
+                                <td>{{ resource.author | slice:0:15 }}...</td>
+                                <td style="text-align: center">{{ resource.likes }}</td>
+                                <td style="text-align: center">{{ resource.views }}</td>
+                                <td style="text-align: center">{{ resource.clicks }}</td>
                             </tr>
                             </tbody>
                         </table>
